v3/cypress/fixtures/invalid-docs/numeric-version-with-content.codap
{
    "type": "CODAP",
    "version": 1234,
    "content": {
        "rowMap": {},
        "tileMap": {}
    }
}
